--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ sites/site*/public/theme/
 textpattern/
 HISTORY.txt
 README.txt
+/[Ll]ibrary/
+/[Tt]emp/
+/[Oo]bj/
+/[Bb]uild/
+/[Bb]uilds/
+/[Ll]ogs/
+/[Mm]emoryCaptures/
